--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: NBA Insight
+title: B-Ball Brain
 description: A machine learning tool for predicting the outcome of an NBA matchup
 permalink: pretty
 plugins:
