Add names to manifest

--- a/assets/favicon/manifest.json
+++ b/assets/favicon/manifest.json
@@ -1,5 +1,6 @@
 {
-    "name": "",
+    "name": "B-Ball Brain",
+    "short_name": "B-Ball Brain",
     "icons": [
         {
             "src": "/assets/favicon/android-chrome-192x192.png",
